feat(mobile-nav): implement mobile navigation with submenu and styling
Add a responsive mobile navigation menu that includes a search input, submenu functionality, and enhanced styling for better user experience. Introduce CSS for mobile layout adjustments and integrate JavaScript for dynamic menu interactions. Update index.html to include the mobile navigation structure and improve accessibility attributes.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
     "liveServer.settings.port": 5501,
-    "workbench.colorTheme": "Monokai Dimmed"
+    "workbench.colorTheme": "Monokai Dimmed",
+    "cSpell.words": [
+        "Greenheck"
+    ]
 }
